--- a/style.css
+++ b/style.css
@@ -1,3 +1,126 @@
-.main{
+@charset "utf-8";
+
+main{
   background-color: aqua;
+}
+
+/*========= レイアウトのためのCSS ===============*/
+
+#wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align:center;
+}
+
+a{
+  color: #333;
+}
+
+/*========= particle js を描画するエリア設定 ===============*/
+
+html,body{
+  height: 100%;/*高さを100%にして描画エリアをとる*/
+}
+
+#particles-js{ 
+  position:fixed;/*描画固定*/
+  z-index:-1;/*描画を一番下に*/
+  width: 100%;
+  height: 100%;
+  background-color:#FEE7E7;/*背景色*/
+}
+
+#wrapper{
+  position: relative;/*描画を#particles-jsよりも上にするためposition:relative;を指定*/
+  z-index: 1;/*z-indexの数字を大きくすることで描画を#particles-jsよりも上に*/
+  width:100%;
+  height: 100%;
+}
+
+.rotateX{
+  animation-name:rotateXAnime;
+  animation-duration:1s;
+  animation-fill-mode:forwards;
+}
+
+@keyframes rotateXAnime{
+  from{
+    transform: rotateX(0);
+    }
+  to{
+    transform: rotateX(-360deg);
+    }
+}
+
+
+/* 　Y 軸（横へ） */
+.rotateY{
+  animation-name:rotateYAnime;
+  animation-duration:1s;
+  animation-fill-mode:forwards;
+}
+
+@keyframes rotateYAnime{
+  from{
+    transform: rotateY(0);
+    }
+  to{
+    transform: rotateY(-360deg);
+    }
+}
+
+
+/* Z 軸（左へ） */
+.rotateLeftZ{
+  animation-name:rotateLeftZAnime;
+  animation-duration:1s;
+  animation-fill-mode:forwards;
+}
+
+@keyframes rotateLeftZAnime{
+  from{
+    transform: rotateZ(0);
+    }
+  to{
+    transform: rotateZ(-360deg);
+    }
+}
+
+
+/* Z 軸（右へ） */
+.rotateRightZ{
+  animation-name:rotateRightZAnime;
+  animation-duration:1s;
+  animation-fill-mode:forwards;
+}
+
+@keyframes rotateRightZAnime{
+  from{
+    transform: rotateZ(0);
+    }
+  to{
+    transform: rotateZ(360deg);
+    }
+}
+
+/*========= レイアウトのためのCSS ===============*/
+
+
+
+p{
+  margin:50px 0;
+}
+
+.flex{
+  display:flex;
+  flex-wrap: wrap;
+}
+
+.box{
+  width: 220px;
+  padding: 20px;
+    margin:0 20px 20px 20px;
+  background: #666;
+  color: #fff;
 }
